--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "spec\\Ckr\\Config": "spec/"
+            "spec\\Ckr\\Config\\": "spec/"
         }
     }
 }
