--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Simple access to multi dimensional arrays, useful for configuration data",
     "require": {
         "php": ">=5.5.0",
-        "ckr/arraymerger": "^1.0.0@RC"
+        "ckr/arraymerger": "^2.0.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.3",
@@ -17,7 +17,6 @@
         }
     ],
     "minimum-stability": "stable",
-    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Ckr\\Config\\": "src/"
